# insta-downloader-gui

./: .env.example  .gitattributes  AI_PROMPT_FEATURES.md  BACKEND_COMPLETE.md  BUGS_FIXED.md  CRITICAL_FIXES_APPLIED.md  DEMO_SCRIPT.md  DEPLOYMENT.md  Dockerfile  FRONTEND_CREATED.md  FRONTEND_README.md  GROQ_COMPLETE_GUIDE.md  GROQ_TRANSCRIPTION_README.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  LICENSE  PREVIEW_MODE_README.md  QUICK_START_GROQ.md  SETUP_GUIDE.md  STREAMLIT_README.md  api_server.py  docker-compose.yml  pyproject.toml  render.yaml  requirements-api.txt  requirements-production.txt  requirements-render.txt  requirements.txt  requirements_streamlit.txt  run_preview.bat  run_streamlit.bat  run_streamlit.sh  settings.json  setup-frontend.bat  start-api-server.bat  streamlit_api.py  streamlit_app.py  streamlit_batch_app.py  streamlit_config.py  streamlit_preview_app.py  (+6 more)
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COOKIE_AUTHENTICATION.md  README.md  SECURITY.md  STATUS.md  USAGE.md
frontend/: .env.example  .env.production  .gitignore  QUICKSTART.md  README.md  index.html  package-lock.json  package.json  setup.ps1  setup.sh  vercel.json  vite.config.ts
frontend/src/: App.tsx
src/: build.bat  main.py  updater.py
src/agents/: instaloader.py  yt_dlp.py  yt_dlp_web.py
src/core/: data_models.py  downloader.py  groq_transcriber.py  session_manager.py  settings_manager.py  transcriber.py
src/resources/: splash.py
tests/: test_downloader.py  test_session_manager.py  test_settings_manager.py  test_url_validator.py
(+10 files in other folders)
